--- a/src/app/myprofile/myprofile.component.css
+++ b/src/app/myprofile/myprofile.component.css
@@ -1,13 +1,5 @@
-.demo-profile-name-red {
-    color:red;
-}
-
-.demo-profile-name-blue {
-    color:blue;
-}
-
-.demo-profile-name-yellow {
-    color:yellowgreen;
+.demo-profile-name-black {
+    color:black;
 }
 
 .example {
