--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,12 @@
 
 <!-- component of univerisity -->
 <div>
-    <app-university></app-university>
+    <!-- <app-university></app-university> -->
 </div>
 
-<!-- component of myprofile -->
+<!-- component of demo -->
 <div>
-    <app-myprofile></app-myprofile>
+   <app-demo></app-demo> 
 </div>
 
 
