--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,20 @@
-<p>
-  about works!
-</p>
+<!-- Declare a new AngularJS app and associate the controller -->
+<form ng-controller="OrderFormController">
+
+  <h1>Services</h1>
+
+  <ul>
+      <!-- Loop through the services array, assign a click handler, and set or
+          remove the "active" css class if needed -->
+      <li ng-repeat="service in services" ng-click="toggleActive(service)" ng-class="{active:service.active}">
+          <!-- Notice the use of the currency filter, it will format the price -->
+          {{service.name}} <span>{{service.price | currency}}</span>
+      </li>
+  </ul>
+
+  <div class="total">
+      <!-- Calculate the total price of all chosen services. Format it as currency. -->
+      Total: <span>{{total() | currency}}</span>
+  </div>
+
+</form>
