--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,82 @@
-.image-aboutus-banner {
-    background: linear-gradient(rgba(245, 245, 245, 0.7), rgba(245, 245, 245, 0.7)), url("https://media-cdn.tripadvisor.com/media/photo-s/01/7d/61/25/view-of-the-beach.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    color:black;
-    padding-top: 110px;
-    padding-bottom:110px;
- }
- 
-.lg-text {
-    font-size:52px;
-    font-weight: 600;
-    text-transform: none;
-    color:black;
+*{
+    margin:0;
+    padding:0;
 }
-.image-aboutus-sm-banner p {
-    color:#fff;
+
+body{
+    font:15px/1.3 'Open Sans', sans-serif;
+    color: #5e5b64;
+    text-align:center;
+}
+
+a, a:visited {
+    outline:none;
+    color:#389dc1;
+}
+
+a:hover{
+    text-decoration:none;
+}
+
+section, footer, header, aside, nav{
+    display: block;
+}
+
+/*-------------------------
+    The menu
+--------------------------*/
+
+nav{
+    display:inline-block;
+    margin:60px auto 45px;
+    background-color:#5597b4;
+    box-shadow:0 1px 1px #ccc;
+    border-radius:2px;
+}
+
+nav a{
+    display:inline-block;
+    padding: 18px 30px;
+    color:#fff !important;
+    font-weight:bold;
+    font-size:16px;
+    text-decoration:none !important;
+    line-height:1;
+    text-transform: uppercase;
+    background-color:transparent;
+
+    -webkit-transition:background-color 0.25s;
+    -moz-transition:background-color 0.25s;
+    transition:background-color 0.25s;
+}
+
+nav a:first-child{
+    border-radius:2px 0 0 2px;
+}
+
+nav a:last-child{
+    border-radius:0 2px 2px 0;
+}
+
+nav.home .home,
+nav.projects .projects,
+nav.services .services,
+nav.contact .contact{
+    background-color:#e35885;
+}
+
+p{
+    font-size:22px;
+    font-weight:bold;
+    color:#7d9098;
+}
+
+p b{
+    color:#ffffff;
+    display:inline-block;
+    padding:5px 10px;
+    background-color:#c4d7e0;
+    border-radius:2px;
+    text-transform:uppercase;
+    font-size:18px;
 }
