--- a/src/app/university/university.component.html
+++ b/src/app/university/university.component.html
@@ -1,53 +1,17 @@
-<div class="container">
-  <div class="row">
+<!-- When this element is clicked, hide the tooltip -->
+<div id="main"  ng-controller="InlineEditorController" (click)="hideTooltip()">
 
-    <figure class="snip0057 red">
-      <figcaption>
-        <h2>Liverpool University
-        </h2>
-        <p>The University of Liverpool is a public university based in the city of Liverpool, England.Since 2009, teaching departments of the University have been divided into three faculties: Science and Engineering, Health and Life Sciences, and Humanities and Social Sciences. </p>
-        <div class="icons">
-          <a href="#">
-            <i class="ion-ios-home"></i>
-          </a>
-          <a href="#">
-            <i class="ion-ios-email"></i>
-          </a>
-          <a href="#">
-            <i class="ion-ios-telephone"></i>
-          </a>
-        </div>
-      </figcaption>
-      <div class="image">
-        <img src="https://www.liverpool.ac.uk/media/livacuk/study/openday/virtual-open-day.jpg" alt="sample4" />
-      </div>
-      <div class="position">England</div>
-    </figure>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <figure class="snip0057 blue">
-      <figcaption>
-        <h2>NewYork University
-        </h2>
-        <p>New York University (NYU) is a private nonprofit research university based in New York City. Founded in 1831, NYU's main campus is centered in Manhattan, located with its core in Greenwich Village, and campuses based throughout New York City</p>
-        <div class="icons">
-          <a href="#">
-            <i class="ion-ios-home"></i>
-          </a>
-          <a href="#">
-            <i class="ion-ios-email"></i>
-          </a>
-          <a href="#">
-            <i class="ion-ios-telephone"></i>
-          </a>
-        </div>
-      </figcaption>
-      
-      <div class="image">
-        <img src="http://blog.sprintax.com/wp-content/uploads/2015/08/NYYU.jpg" alt="sample3" />
-      </div>
-      <div class="position">United State</div>
-    </figure>
+  <!-- This is the tooltip. It is shown only when the showtooltip variable is truthful -->
+  <div class="tooltip" (click)="$event.stopPropagation()" *ngIf="showtooltip">
 
-
+      <!-- ng-model binds the contents of the text field with the "value" model.
+       Any changes to the text field will automatically update the value, and
+       all other bindings on the page that depend on it.  -->
+      <input type="text"[(ngModel)]="value" />
   </div>
+
+  <!-- Call a method defined in the InlineEditorController that toggles
+   the showtooltip variable -->
+  <p (click)="toggleTooltip($event)">{{value}}</p>
+
 </div>
