--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -18,23 +18,16 @@
     </div>
 
     <div class="example-4">
-<<<<<<< HEAD
         <!-- next time self define directive 
         <p *ngSwitchCase="5">Value is 5</p>
-=======
         <!-- next time self define directive -->
         <!-- <p *ngSwitchCase="5">Value is 5</p> -->
->>>>>>> 21e5f1f4ed68b6b1912263b603922559e2532451
     </div>
 
     <div class="example-5">
         KEEP IT OR NOT:
-<<<<<<< HEAD
-        <input type="checkbox" [(ngModel)]="myVar" *ngInit="myVar = true">
-=======
         <input type="checkbox" [(ngModel)]="myVar">
         {{myVar}}
->>>>>>> 21e5f1f4ed68b6b1912263b603922559e2532451
         <div *ngIf="myVar">
             <h1>Welcome</h1>
             <p>Welcome to my home.</p>
@@ -75,4 +68,4 @@
         <ng-template #loginT> ZhouZhou </ng-template>
         <ng-template #logoutT>Please sign in</ng-template>
     </div>
-</div>>-->
+</div>
