--- a/prj-routing-final/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/prj-routing-final/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,12 +20,12 @@
       <button
         type="button"
         class="btn btn-primary dropdown-toggle">
-        Manage Recipe <span class="caret"></span>
+        Manage Brand <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
-        <li><a style="cursor: pointer;">Delete Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Brand</a></li>
+        <li><a style="cursor: pointer;">Delete Brand</a></li>
       </ul>
     </div>
   </div>
