--- a/prj-routing-final/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/prj-routing-final/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
+    <button class="button button-neutral" (click)="onNewRecipe()">New Brand</button>
   </div>
 </div>
 <hr>
