--- a/prj-routing-final/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/prj-routing-final/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -3,7 +3,7 @@
     <form>
       <div class="row">
         <div class="col-sm-5 form-group">
-          <label for="name">Name</label>
+          <label for="name">Brand Name</label>
           <input
             type="text"
             id="name"
