--- a/prj-routing-final/src/app/header/header.component.html
+++ b/prj-routing-final/src/app/header/header.component.html
@@ -8,6 +8,8 @@
         <li routerLinkActive="active"><a routerLink="/recipes">Brand</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
         <li routerLinkActive="active"><a routerLink="/my-profile">My Profile</a></li>
+        <li routerLinkActive="active"><a routerLink="/store-list">Store</a></li>
+        <li routerLinkActive="active"><a routerLink="/location-list">Location List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
