--- a/prj-routing-final/src/app/recipes/recipes.component.html
+++ b/prj-routing-final/src/app/recipes/recipes.component.html
@@ -1,3 +1,8 @@
+<div>
+  <app-banner></app-banner>
+</div>
+<br>
+<br>
 <div class="row">
   <div class="col-md-8">
     <app-recipe-list></app-recipe-list>
